The .card__picture overflow the .card__side parent so border-radius wasn't visible before. We fix that by overflow: hidden declaration on .card__side parent.

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -16,6 +16,7 @@
     width: 100%;
     backface-visibility: hidden;
     border-radius: 3px;
+    overflow: hidden;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
     
     &--front {
